Refactored to have central data store + linking nodes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -52,6 +52,23 @@
 #topNav{
   z-index: 1000
 }
-input#projectTitle{
-  background-color: "white";
+
+#topNav#projectTitle{
+  background-color: transparent;
+  width: 100%;
+  margin: 6px 0;
+  height: 38px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-shadow: inset 0 1px 3px #ddd;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
+
+
